feat: Apply local iota_common lib and some optimization

--- a/mam/examples/BUILD
+++ b/mam/examples/BUILD
@@ -17,6 +17,7 @@ cc_binary(
 cc_binary(
     name = "send-msg",
     srcs = ["send-msg.c"],
+    copts = ["-g"],
     deps = [
         ":send-common",
     ],
